--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
   background-size: contain;
   background-repeat: no-repeat;
   width: 1100px;
+
  
  
   margin-left: 10%;
@@ -22,7 +23,10 @@ body{
   font-size: 35px;
   color: white;
   border-radius: 10px;
-  
+  margin-left: 45%;
+
+
+
 }
  
 
