--- a/style.css
+++ b/style.css
@@ -8,10 +8,7 @@ body{
   background-image:url(img/kisspng-high-rise-building-skyscraper-city-__building-5a8e0cf8a52297.7854214115192588726764.png);
   background-size: contain;
   background-repeat: no-repeat;
-  width: 1100px;
-
- 
- 
+  /* width: 1100px; */
   margin-left: 10%;
  
  
@@ -23,12 +20,18 @@ body{
   font-size: 35px;
   color: white;
   border-radius: 10px;
-  margin-left: 25%;
+  margin-left: 35%;
+}
+.score{
+  float: right;
+  color: rgb(187, 1, 1);
+  margin-right: 35%;
+ 
 }
 
-.START-GAME{
-background-image: url(img/GameOver.gif)
-}
- 
+
+
+
+
 
   
